RESOLVED FIXED108318
[Qt] Fix Qt/Mac build after r141024 and r141037
https://bugs.webkit.org/show_bug.cgi?id=108318
Summary [Qt] Fix Qt/Mac build after r141024 and r141037
Zeno Albisser
Reported 2013-01-30 02:45:56 PST
[Qt] Fix Qt/Mac build after r141024
Attachments
Patch (3.14 KB, patch)
2013-01-30 02:50 PST, Zeno Albisser
no flags
Patch (3.68 KB, patch)
2013-01-30 05:09 PST, Zeno Albisser
no flags
Zeno Albisser
Comment 1 2013-01-30 02:50:18 PST
Kentaro Hara
Comment 2 2013-01-30 03:48:55 PST
Comment on attachment 185450 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=185450&action=review rs=me > Source/WTF/ChangeLog:3 > + [Qt] Fix Qt/Mac build after r141024 I think this error would be due to r141037.
Zeno Albisser
Comment 3 2013-01-30 04:42:07 PST
*** Bug 108321 has been marked as a duplicate of this bug. ***
Zeno Albisser
Comment 4 2013-01-30 05:00:34 PST
Comment on attachment 185450 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=185450&action=review >> Source/WTF/ChangeLog:3 >> + [Qt] Fix Qt/Mac build after r141024 > > I think this error would be due to r141037. It is failing on the bot since r141024. But it is likely that the patch fixes more than a "single" breakage. So I'll update the title to mention both revisions. I will have to re-upload the patch again, because there are two more PLATFORM(MAC) that need to be replaced with OS(DARWIN) in Functional.h. - Sorry for the inconvenience.
Zeno Albisser
Comment 5 2013-01-30 05:09:53 PST
Kentaro Hara
Comment 6 2013-01-30 05:10:27 PST
Comment on attachment 185471 [details] Patch rs=me
Zeno Albisser
Comment 7 2013-01-30 06:50:28 PST
Comment on attachment 185471 [details] Patch Clearing flags on attachment: 185471 Committed r141263: <http://trac.webkit.org/changeset/141263>
Zeno Albisser
Comment 8 2013-01-30 06:50:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.