[Qt] Fix Qt/Mac build after r141024 and r141037 https://bugs.webkit.org/show_bug.cgi?id=108318

Reviewed by Kentaro Hara.

Source/WebKit2:

* Platform/CoreIPC/mac/ConnectionMac.cpp:
(CoreIPC::Connection::platformInvalidate):
    Replace nullptr with 0 to allow compiling without C++11 support.

Source/WTF:

* wtf/Functional.h:
    Make sure Block.h is included and its functionality
    is enabled for Qt on Mac.

Canonical link: https://commits.webkit.org/126544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141263 268f45cc-cd09-0410-ab3c-d52691b4dbfc